// Copyright 2012 Aaron Jacobs. All Rights Reserved.
// Author: aaronjjacobs@gmail.com (Aaron Jacobs)
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

package repr_proto;

message BlobInfoProto {
  // The SHA-1 hash of the blob, in 20-byte 'raw' form.
  optional bytes hash = 1;
}

// An instant in time, with nanosecond resolution.
message TimeProto {
  // The number of seconds since the Unix time epoch.
  optional int64 second = 1;

  // A nanosecond in the second specified above. This must be in the range
  // [0, 1e9).
  optional uint32 nanosecond = 2;
}

message DirectoryEntryProto {
  enum Type {
    // Sentinel for a missing value.
    TYPE_UNKNOWN      = -1;

    TYPE_FILE         =  0;
    TYPE_DIRECTORY    =  1;
    TYPE_SYMLINK      =  2;
    TYPE_BLOCK_DEVICE =  3;
    TYPE_CHAR_DEVICE  =  4;
  }
  optional Type type = 1;

  // The permissions bits for this entry, as described in the documentation for
  // fs.DirectoryEntry, with values as in the golang os package.
  optional uint32 permissions = 2;

  // The name of this entry.
  optional string name = 3;

  // The modification time.
  optional TimeProto mtime = 4;

  // The zero or more blobs that make up a regular file's contents, to be
  // concatenated in order.
  repeated BlobInfoProto blob = 5;

  // The target, if this is a symlink.
  optional string target = 6;
}

message DirectoryListingProto {
  repeated DirectoryEntryProto entry = 1;
}
